Update build instructions.
git-svn-id: https://svn.apache.org/repos/asf/forrest/trunk@160994 13f79535-47bb-0310-9956-ffa450edef68

--- a/site-author/content/xdocs/docs/build.xml
+++ b/site-author/content/xdocs/docs/build.xml
@@ -58,12 +58,7 @@
     </section>
 
    <section id="building">
-     <title>Building and Installing Forrest</title>
-<note>
-This document applies to the current development 0.7-dev version.
-See other instructions for the current
-<link href="http://forrest.apache.org/build.html">0.6 release</link> version.
-</note>
+     <title>Building and installing Forrest</title>
      <p>
        To build Forrest, change directory to '<code>forrest/main</code>', and
        then type '<code>build</code>' on Windows or '<code>./build.sh</code>' on
@@ -72,7 +67,7 @@ See other instructions for the current
      </p>
      <source>
   *-----------------------------------------------------------------
-  | installation notice
+  | Installation notice
   *-----------------------------------------------------------------
   | You have built the X.Y-dev version of Forrest.
   | Please set the environment variable FORREST_HOME point to
@@ -95,18 +90,23 @@ See other instructions for the current
 [/svn/forrest]$ export PATH=$PATH:$FORREST_HOME/bin
      </source>
      <p>
-       After updating the Forrest source from SVN if there have been certain types of
+       After updating the Forrest source from SVN, if there have been certain types of
        updates (to the Java source for xml-forrest.jar), you will need to build forrest again.
      </p>
     </section>
 
   <section id="run">
     <title>Run Forrest, run!</title>
-    <p>Forrest is now ready to go. Type '<code>forrest run</code>' to see
-    the local webapp using the bundled Jetty server. Edit some of Forrest's
-    core documentation and see the effect.
-    The document <link href="site:your-project">Using Forrest</link> is
-    your next step.</p>
+    <p>
+      Forrest is now ready to go. To view and edit the local copy of
+      Forrest core documentation, cd to site-author and do
+      '<code>forrest run</code>' to see
+      the local webapp using the bundled Jetty server. Edit something in
+      content/xdocs/*.xml see the immediate effect.
+    </p>
+    <p>
+      The document <link href="site:your-project">Using Forrest</link> is
+      your next step.</p>
   </section>
 
 </body>
