rename to bring into line with naming conventions
git-svn-id: https://svn.apache.org/repos/asf/forrest/trunk@161305 13f79535-47bb-0310-9956-ffa450edef68

--- a/plugins/org.apache.forrest.plugin.input.logs/build.xml
+++ b/plugins/org.apache.forrest.plugin.input.logs/build.xml
@@ -17,7 +17,7 @@
 -->
 <project default="docs" basedir="." name="Forrest plugin build file">
 
-  <property name="plugin-name" value="org.apache.forrest.plugin.logs"/>
+  <property name="plugin-name" value="org.apache.forrest.plugin.intput.logs"/>
 
   <import file="../build.xml"/>
   
