Tweaks to text.
git-svn-id: https://svn.apache.org/repos/asf/forrest/trunk@161627 13f79535-47bb-0310-9956-ffa450edef68

--- a/main/fresh-site/forrest.properties
+++ b/main/fresh-site/forrest.properties
@@ -1,4 +1,4 @@
-# Copyright 2002-2004 The Apache Software Foundation or its licensors,
+# Copyright 2002-2005 The Apache Software Foundation or its licensors,
 # as applicable.
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
@@ -15,7 +15,7 @@
 
 ##############
 # Properties used by forrest.build.xml for building the website
-# These are the defaults, un-comment them if you need to change them.
+# These are the defaults, un-comment them only if you need to change them.
 ##############
 
 # Prints out a summary of Forrest settings for this project
@@ -25,9 +25,10 @@
 #project.name=my-project
 
 # Specifies name of Forrest skin to use
-#project.skin=tigris
+# See list at http://forrest.apache.org/docs/skins.html
 #project.skin=pelt
 
+# Descriptors for plugins and skins
 # comma separated list, file:// is supported
 #forrest.skins.descriptors=http://forrest.apache.org/skins/skins.xml,file:///c:/myskins/skins.xml
 #forrest.plugins.descriptors=http://forrest.apache.org/plugins/plugins.xml
