--- a/plugins/org.apache.forrest.plugin.view/forrest.properties
+++ b/plugins/org.apache.forrest.plugin.view/forrest.properties
@@ -27,7 +27,7 @@
 # Specifies name of Forrest skin to use
 #project.skin=tigris
 #project.skin=pelt
-#project.skin=leather-dev
+project.skin=leather-dev
 
 # comma separated list, file:// is supported
 #forrest.skins.descriptors=http://forrest.apache.org/skins/skins.xml,file:///c:/myskins/skins.xml
