--- a/plugins/org.apache.forrest.plugin.output.viewHelper/build.xml
+++ b/plugins/org.apache.forrest.plugin.output.viewHelper/build.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0"?>
 <!--
   Copyright 2002-2005 The Apache Software Foundation or its licensors,
   as applicable.
@@ -17,7 +16,7 @@
 -->
 <project default="docs" basedir="." name="Forrest plugin build file">
 
-  <property name="plugin-name" value="org.apache.forrest.plugin.viewHelper"/>
+  <property name="plugin-name" value="org.apache.forrest.plugin.output.viewHelper"/>
 
   <import file="../build.xml"/>
 
