Redirect /docs /0.6/docs until after the release.
git-svn-id: https://svn.apache.org/repos/asf/forrest/site@162129 13f79535-47bb-0310-9956-ffa450edef68

--- a/.htaccess
+++ b/.htaccess
@@ -8,6 +8,10 @@ RedirectMatch ^/forrest-issues(.*) http://forrest.apache.org/0.7/forrest-issues$
 
 Redirect /docs/plugins http://forrest.apache.org/0.7/docs/plugins
 
+# change these to 0.7 after release
+Redirect /docs http://forrest.apache.org/0.6/docs
+
+# handle all DTDs etc.
 <Files ~ "\.(dtd|mod)$">
   ForceType application/xml-dtd
 </Files>
