--- a/.htaccess
+++ b/.htaccess
@@ -5,6 +5,7 @@ RedirectMatch ^/mail-archives(.*) http://forrest.apache.org/mail-lists$1
 RedirectMatch ^/proposal-asf-(.*) http://forrest.apache.org/0.7/proposal-asf-$1
 RedirectMatch ^/live-sites(.*) http://forrest.apache.org/0.7/live-sites$1
 RedirectMatch ^/forrest-issues(.*) http://forrest.apache.org/0.7/forrest-issues$1
+RedirectMatch ^/docs\.(.*) http://forrest.apache.org/0.7/docs.$1
 
 Redirect /docs/plugins http://forrest.apache.org/0.7/docs/plugins
 
