Redirect /howto /0.6/howto
git-svn-id: https://svn.apache.org/repos/asf/forrest/site@163794 13f79535-47bb-0310-9956-ffa450edef68

--- a/.htaccess
+++ b/.htaccess
@@ -11,6 +11,7 @@ Redirect /docs/plugins http://forrest.apache.org/0.7/docs/plugins
 
 # change these to 0.7 after release
 Redirect /docs http://forrest.apache.org/0.6/docs
+Redirect /howto http://forrest.apache.org/0.6/howto
 
 # handle all DTDs etc.
 <Files ~ "\.(dtd|mod)$">
