Redirect changes and todo to the dev version.
git-svn-id: https://svn.apache.org/repos/asf/forrest/site@163999 13f79535-47bb-0310-9956-ffa450edef68

--- a/.htaccess
+++ b/.htaccess
@@ -1,11 +1,15 @@
 AddDefaultCharset UTF-8
 
-RedirectMatch ^/mail-archives(.*) http://forrest.apache.org/mail-lists$1
+RedirectMatch ^/mail-archives(.*) http://forrest.apache.org/0.6/mail-lists$1
+RedirectMatch ^/mail-lists(.*) http://forrest.apache.org/0.6/mail-lists$1
 
+# some special docs need to point to the development version
 RedirectMatch ^/proposal-asf-(.*) http://forrest.apache.org/0.7/proposal-asf-$1
 RedirectMatch ^/live-sites(.*) http://forrest.apache.org/0.7/live-sites$1
 RedirectMatch ^/forrest-issues(.*) http://forrest.apache.org/0.7/forrest-issues$1
 RedirectMatch ^/docs\.(.*) http://forrest.apache.org/0.7/docs.$1
+RedirectMatch ^/changes(.*) http://forrest.apache.org/0.7/docs/changes$1
+RedirectMatch ^/todo(.*) http://forrest.apache.org/0.7/docs/todo$1
 
 Redirect /docs/plugins http://forrest.apache.org/0.7/docs/plugins
 
