rename pdf-output plugin to comply with new naming conventions for plugins
git-svn-id: https://svn.apache.org/repos/asf/forrest/trunk@164079 13f79535-47bb-0310-9956-ffa450edef68

--- a/main/build.xml
+++ b/main/build.xml
@@ -277,8 +277,8 @@
     <echo>=============================</echo>
     <echo>Testing using an ouptut plugin</echo>      
     <echo>=============================</echo>
-    <ant antfile="${forrest.home}/plugins/org.apache.forrest.plugin.pdf-output/build.xml" target="test">
-      <property name="basedir" location="${forrest.home}/plugins/org.apache.forrest.plugin.pdf-output"/>
+    <ant antfile="${forrest.home}/plugins/org.apache.forrest.plugin.output.pdf/build.xml" target="test">
+      <property name="basedir" location="${forrest.home}/plugins/org.apache.forrest.plugin.output.pdf"/>
     </ant>
     
     <echo>=============================</echo>
