--- a/plugins/wiki/forrest.properties
+++ b/plugins/wiki/forrest.properties
@@ -106,4 +106,4 @@
 # The names of plugins that are required to build the project
 # comma separated list (no spaces)
 # Run "forrest available-plugins" for a list of plug-ins currently available
-project.required.plugins=org.apache.forrest.plugin.projectInfo,wiki,org.apache.forrest.plugin.pdf-output
+project.required.plugins=org.apache.forrest.plugin.projectInfo,wiki,org.apache.forrest.plugin.output.pdf
