--- a/whiteboard/plugins/org.apache.forrest.plugin.internal.view/forrest.properties
+++ b/whiteboard/plugins/org.apache.forrest.plugin.internal.view/forrest.properties
@@ -107,4 +107,4 @@ project.skin=leather-dev
 # The names of plugins that are required to build the project
 # comma separated list (no spaces)
 # Run "forrest available-plugins" for a list of plug-ins currently available
-project.required.plugins=org.apache.forrest.plugin.internal.view,org.apache.forrest.plugin.internal.viewHelper,org.apache.forrest.plugin.projectInfo,org.apache.forrest.plugin.pdf-output
+project.required.plugins=org.apache.forrest.plugin.internal.view,org.apache.forrest.plugin.internal.viewHelper,org.apache.forrest.plugin.projectInfo,org.apache.forrest.plugin.output.pdf
