--- a/main/fresh-site/forrest.properties
+++ b/main/fresh-site/forrest.properties
@@ -115,7 +115,7 @@
 # The names of plugins that are required to build the project
 # comma separated list (no spaces)
 # Run "forrest available-plugins" for a list of plug-ins currently available
-project.required.plugins=org.apache.forrest.plugin.pdf-output
+project.required.plugins=org.apache.forrest.plugin.output.pdf
 
 # Proxy configuration
 # proxy.host=
