--- a/main/webapp/default-forrest.properties
+++ b/main/webapp/default-forrest.properties
@@ -147,7 +147,7 @@ project.i18n=false
 # The names of plugins that are required to build the project
 # comma separated list (no spaces)
 # Run "forrest available-plugins" for a list of plug-ins currently available
-project.required.plugins=org.apache.forrest.plugin.OpenOffice.org,simplified-docbook,wiki,org.apache.forrest.plugin.pdf-output
+project.required.plugins=org.apache.forrest.plugin.OpenOffice.org,simplified-docbook,wiki,org.apache.forrest.plugin.output.pdf
 
 # Proxy configuration
 # proxy.host=
