--- a/whiteboard/plugins/org.apache.forrest.plugin.Chart/forrest.properties
+++ b/whiteboard/plugins/org.apache.forrest.plugin.Chart/forrest.properties
@@ -105,4 +105,4 @@
 # The names of plugins that are required to build the project
 # comma separated list (no spaces)
 # Run "forrest available-plugins" for a list of plug-ins currently available
-project.required.plugins=org.apache.forrest.plugin.Chart,org.apache.forrest.plugin.pdf-output
+project.required.plugins=org.apache.forrest.plugin.Chart,org.apache.forrest.plugin.output.pdf
