--- a/plugins/org.apache.forrest.plugin.input.feeder/forrest.properties
+++ b/plugins/org.apache.forrest.plugin.input.feeder/forrest.properties
@@ -105,4 +105,4 @@
 #project.i18n=true
 # The names of plugins that are required to build the project
 # comma separated list (no spaces)
-project.required.plugins=org.apache.forrest.plugin.projectInfo,org.apache.forrest.plugin.input.feeder,org.apache.forrest.plugin.output.pdf
+project.required.plugins=org.apache.forrest.plugin.input.projectInfo,org.apache.forrest.plugin.input.feeder,org.apache.forrest.plugin.output.pdf
