--- a/plugins/org.apache.forrest.plugin.output.Text/forrest.properties
+++ b/plugins/org.apache.forrest.plugin.output.Text/forrest.properties
@@ -106,4 +106,4 @@ project.name=Text-Output
 
 # The names of plugins that are required to build the project
 # comma separated list (no spaces)
-project.required.plugins=org.apache.forrest.plugin.projectInfo,org.apache.forrest.plugin.output.Text,org.apache.forrest.plugin.output.pdf
+project.required.plugins=org.apache.forrest.plugin.input.projectInfo,org.apache.forrest.plugin.output.Text,org.apache.forrest.plugin.output.pdf
