--- a/site-author/forrest.properties
+++ b/site-author/forrest.properties
@@ -33,4 +33,4 @@ project.issues-rss-url=http://issues.cocoondev.org/IssueNavigator.jspa?pid=10000
 # comma separated list (no spaces)
 # Run "forrest available-plugins" for a list of plug-ins currently available
 project.required.plugins=org.apache.forrest.plugin.output.pdf
-project.required.plugins=org.apache.forrest.plugin.dtdx-input,org.apache.forrest.plugin.projectInfo,org.apache.forrest.plugin.output.pdf,org.apache.forrest.plugin.pod-output
+project.required.plugins=org.apache.forrest.plugin.dtdx-input,org.apache.forrest.plugin.input.projectInfo,org.apache.forrest.plugin.output.pdf,org.apache.forrest.plugin.pod-output
