--- a/whiteboard/plugins/rtf-output/forrest.properties
+++ b/whiteboard/plugins/rtf-output/forrest.properties
@@ -106,4 +106,4 @@
 
 # The names of plugins that are required to build the project
 # comma separated list (no spaces)
-project.required.plugins=org.apache.forrest.plugin.projectInfo,rtf-output
+project.required.plugins=org.apache.forrest.plugin.input.projectInfo,rtf-output
