--- a/plugins/org.apache.forrest.plugin.output.simplified-docbook/build.xml
+++ b/plugins/org.apache.forrest.plugin.output.simplified-docbook/build.xml
@@ -17,7 +17,7 @@
 -->
 <project default="docs" basedir="." name="Forrest plugin build file">
 
-  <property name="plugin-name" value="simplified-docbook"/>
+  <property name="plugin-name" value="org.apache.forrest.plugin.input.simplified-docbook"/>
 
   <import file="../build.xml"/>
   
