--- a/plugins/org.apache.forrest.plugin.input.wiki/build.xml
+++ b/plugins/org.apache.forrest.plugin.input.wiki/build.xml
@@ -17,7 +17,7 @@
 -->
 <project default="docs" basedir="." name="Forrest plugin build file">
 
-  <property name="plugin-name" value="wiki"/>
+  <property name="plugin-name" value="org.apache.forrest.plugin.input.wiki"/>
 
   <import file="../build.xml"/>
   
