--- a/forrest.properties
+++ b/forrest.properties
@@ -28,4 +28,4 @@ project.issues-rss-url=http://issues.cocoondev.org/IssueNavigator.jspa?pid=10000
 # The names of plugins that are required to build the project
 # comma separated list (no spaces)
 # Run "forrest available-plugins" for a list of plug-ins currently available
-project.required.plugins=org.apache.forrest.plugin.pdf-output,org.apache.forrest.plugin.projectInfo,org.apache.forrest.plugin.dtdx-input,wiki,org.apache.forrest.plugin.OpenOffice.org,org.apache.forrest.plugin.pod-output
+project.required.plugins=org.apache.forrest.plugin.output.pdf,org.apache.forrest.plugin.input.projectInfo,org.apache.forrest.plugin.input.dtdx,org.apache.forrest.plugin.input.wiki,org.apache.forrest.plugin.input.OpenOffice.org,org.apache.forrest.plugin.output.POD
