Remove duplicate property. Change to new names for plugins.
git-svn-id: https://svn.apache.org/repos/asf/forrest/trunk@164310 13f79535-47bb-0310-9956-ffa450edef68

--- a/site-author/forrest.properties
+++ b/site-author/forrest.properties
@@ -32,5 +32,4 @@ project.issues-rss-url=http://issues.cocoondev.org/IssueNavigator.jspa?pid=10000
 # The names of plugins that are required to build the project
 # comma separated list (no spaces)
 # Run "forrest available-plugins" for a list of plug-ins currently available
-project.required.plugins=org.apache.forrest.plugin.output.pdf
-project.required.plugins=org.apache.forrest.plugin.dtdx-input,org.apache.forrest.plugin.input.projectInfo,org.apache.forrest.plugin.output.pdf,org.apache.forrest.plugin.pod-output
+project.required.plugins=org.apache.forrest.plugin.input.dtdx,org.apache.forrest.plugin.input.projectInfo,org.apache.forrest.plugin.output.pdf,org.apache.forrest.plugin.output.POD
