Fix the problem with "Redirect /docs/plugins/". Thanks to Erik Abele.
git-svn-id: https://svn.apache.org/repos/asf/forrest/site@164476 13f79535-47bb-0310-9956-ffa450edef68

--- a/.htaccess
+++ b/.htaccess
@@ -13,11 +13,8 @@ RedirectMatch ^/docs\.(.*) http://forrest.apache.org/0.7/docs.$1
 RedirectMatch ^/changes(.*) http://forrest.apache.org/0.7/docs/changes$1
 RedirectMatch ^/todo(.*) http://forrest.apache.org/0.7/docs/todo$1
 
+Options -MultiViews
 Redirect /docs/plugins http://forrest.apache.org/0.7/docs/plugins
-# FIXME: there is something strange with the above redirect
-# ... try these ones instead:
-Redirect /docs/plugouts http://forrest.apache.org/0.7/docs/plugins
-Redirect /docs/pluginnings http://forrest.apache.org/0.7/docs/plugins
 
 # Change these to 0.7 after its release.
 Redirect /docs http://forrest.apache.org/0.6/docs
