Changed plugin template location to the main plugin dir
git-svn-id: https://svn.apache.org/repos/asf/forrest/trunk@164774 13f79535-47bb-0310-9956-ffa450edef68

--- a/whiteboard/plugins/build.xml
+++ b/whiteboard/plugins/build.xml
@@ -34,7 +34,7 @@
   <property name="plugin.lib.dir"             value="lib"/>
   <property name="plugin.stylesheets.dir"     value="${plugin.resources.dir}/stylesheets"/>
   
-  <property name="plugin.template.dir"        value="pluginTemplate"/>
+  <property name="plugin.template.dir"        value="${forrest.plugins.dir}/pluginTemplate"/>
   
   <property name="deploy.svn.user"            value=""/>
   <property name="deploy.svn.password"        value=""/>
