Changed plugin template location to {forrest.plugins.dir}/pluginTemplate in the build file
git-svn-id: https://svn.apache.org/repos/asf/forrest/trunk@164775 13f79535-47bb-0310-9956-ffa450edef68

--- a/plugins/build.xml
+++ b/plugins/build.xml
@@ -31,7 +31,7 @@
   <property name="plugin.resources.dir"       value="resources"/>
   <property name="plugin.stylesheets.dir"     value="${plugin.resources.dir}/stylesheets"/>
   
-  <property name="plugin.template.dir"        value="pluginTemplate"/>
+  <property name="plugin.template.dir"        value="${forrest.plugins.dir}/pluginTemplate"/>
   
   <property name="deploy.svn.user"            value=""/>
   <property name="deploy.svn.password"        value=""/>
